# fl-classification

./: .gitignore  .pre-commit-config.yaml  3D Tensor Creation_Custom.py  README.md  pyproject.toml  requirements.txt  run_local_simulation.py  run_multi_machines_tmux.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  research_discussion.md
.github/workflows/: README.md  code_quality.yml  functional_test.yml  test.yml
adni_classification/: __init__.py
adni_classification/config/: __init__.py  config.py  fl_config.py
adni_classification/datasets/: __init__.py  dataset_factory.py  tensor_folder_dataset.py  transforms.py
adni_classification/models/: __init__.py  model_factory.py  rosanna_cnn_gn.py
adni_flwr/: client_app.py  server_app.py  server_fn.py  task.py
adni_flwr/apps/: __init__.py  base.py  client_apps.py  server_apps.py
adni_flwr/apps/differential_privacy/: __init__.py  adaptive_dp.py  opacus_dp.py
adni_flwr/common/: __init__.py  config_loader.py  strategy_detector.py
adni_flwr/strategies/: __init__.py  base.py  differential_privacy.py  differential_privacy_opacus.py  factory.py  fedavg.py  fedprox.py  secaggplus.py
adni_flwr/utils/: __init__.py  app_utils.py  logging_config.py  memory_monitor.py  wandb_logger.py
configs/: rosanna_gn_3t_P1_2classes_trainval_1035images.yaml  tensor_resnet18.yaml
configs/fl-3T_P1-1220images-2classes-3clients-dp/: client1.yaml  client2.yaml  client3.yaml  fl_server.yaml
configs/fl-rosanna-3T_P1-1220images-2classes-3clients-dp/: client1.yaml  client2.yaml  client3.yaml  fl_server.yaml
configs/fl-rosanna-3T_P1-1220images-2classes-4clients-dp/: client1.yaml  client2.yaml  client3.yaml  client4.yaml  fl_server.yaml
configs/fl-rosanna-3T_P1-trainval_1035images-2classes-2clients-dp/: client1.yaml  client2.yaml  fl_server.yaml
configs/fl-rosanna-3T_P1-trainval_1035images-2classes-2clients-fedavg/: client1.yaml  client2.yaml  fl_server.yaml
configs/fl-rosanna-3T_P1-trainval_1035images-2classes-2clients-fedprox/: client1.yaml  client2.yaml  fl_server.yaml
configs/fl-rosanna-3T_P1-trainval_1035images-2classes-3clients-dp/: client1.yaml  client2.yaml  client3.yaml  fl_server.yaml
configs/fl-rosanna-3T_P1-trainval_1035images-2classes-3clients-fedavg/: client1.yaml  client2.yaml  client3.yaml  fl_server.yaml
configs/fl-rosanna-3T_P1-trainval_1035images-2classes-3clients-fedprox/: client1.yaml  client2.yaml  client3.yaml  fl_server.yaml
configs/fl-rosanna-3T_P1-trainval_1035images-2classes-3clients-secaggplus/: client1.yaml  client2.yaml  client3.yaml  fl_server.yaml
configs/fl-rosanna-3T_P1-trainval_1035images-2classes-4clients-dp/: client1.yaml  client2.yaml  client3.yaml  client4.yaml  fl_server.yaml
configs/fl-rosanna-3T_P1-trainval_1035images-2classes-4clients-fedprox/: client1.yaml  client2.yaml  client3.yaml  client4.yaml  fl_server.yaml
configs/fl-rosanna-3T_P1-trainval_1035images-2classes-4clients-secaggplus/: client1.yaml  client2.yaml  client3.yaml  client4.yaml  fl_server.yaml
docs/: MRI_PREPROCESSING.md  TEST_SCRIPT_USAGE.md
scripts/: split_by_patient.py  sync_data.sh  test.py  train.py
tests/: README.md  __init__.py  conftest.py  test_adni_base_dataset.py  test_imports.py
tests/config/: test_config.py  test_fl_config.py
